JWT-Authentication added/Delete functionality

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -109,6 +109,7 @@
                             <p class="card-text">Price: $<%= product.price %></p>
                             <p class="card-text">Rating: <%= product.rating %></p>
                             <a href="#" class="btn btn-primary">View Details</a>
+                            <a href="/delete/<%= product._id %>" class="btn btn-danger">Delete</a>
                         </div>
                     </div>
                 </div>
